# nx

./: .dockerignore  .formatter.exs  .gitignore  .gitmodules  .tool-versions  CITATION.cff  CONTINUE_PROMPT.md  DEBUG_NOTES.md  Dockerfile  EVALUATOR_FLATTENING_STATUS.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  MISSION_COMPLETE.md  Makefile  Makefile.win  NOTES.md  README.md  REFACTORING_SUMMARY.md  SESSION_COMPLETE.md  SESSION_SUMMARY_TEMPLATES.md  TEMPLATES_OPTIMIZATION_COMPLETE.md  bug.exs  code_review.md  debug_hook_cond.exs  elixir_call.exs  evaluator.exs  implementation_plan.md  mix.exs  nx_elixir_call_exla_design.md
.github/workflows/: ci.yml
bench/: dot_product.exs  softmax.exs
c_src/exla/: BUILD  erts  exla.cc  exla_allocator.cc  exla_allocator.h  exla_aot_compilation.cc  exla_aot_compilation.h  exla_client.cc  exla_client.h  exla_device.cc  exla_device.h  exla_log_sink.h  exla_macros.h  exla_nif_util.cc  exla_nif_util.h
candlex/: .formatter.exs  .gitignore  CHANGELOG.md  README.md  mix.exs
candlex/config/: config.exs
candlex/examples/: linear_regression.exs  mnist.exs
candlex/lib/: candlex.ex
candlex/native/candlex/: Cargo.toml  README.md  build.rs
candlex/native/candlex/.cargo/: config.toml
candlex/native/candlex/src/: candlex.rs  devices.rs  error.rs  kernels.rs  lib.rs  ops.rs  tensor.rs  tensors.rs
candlex/native/candlex/src/kernels/: custom_binary.cu  custom_unary.cu  strides.cuh
candlex/test/: candlex_test.exs  test_helper.exs
config/: config.exs  runtime.exs
docker/: Dockerfile.cuda  Dockerfile.rocm
examples/: addition_with_broadcasting.exs  aot_compilation.exs  basic_addition.exs  binaries_as_tensors.exs  buffers.exs  conditionals.exs  get_shape.exs  infeed.exs  mnist.exs  multi_device_exla.exs  regression.exs  scalar_parameter_addition.exs  slicing_tensors.exs
exla/: .dockerignore  .formatter.exs  .gitignore  CHANGELOG.md  INFEED_OUTFEED_MIGRATION.md  MESSAGE_COMMUNICATION.md  Makefile  Makefile.win  README.md  aot.exs  cond.exs  custom_call.exs  example.exs  mix.exs  out.txt  sharding.exs  sharding_example.exs  test.exs  test_cuda.exs  top_k.exs
exla/bench/: median.exs  softmax.exs
exla/c_src/: nif_call.h
exla/c_src/iree_runtime/: CMakeLists.txt
exla/config/: config.exs  runtime.exs
exla/docker/: Dockerfile.cuda  Dockerfile.host  Dockerfile.rocm
exla/examples/: message_comm_complete_example.exs  message_comm_complete_working_example.exs  message_comm_example.exs  message_comm_simple_example.exs  message_comm_working_example.exs  mnist.exs  profiler.exs  real_infeed_example.exs  regression.exs
exla/guides/: rotating-image.livemd
exla/lib/: exla.ex
exla/livebooks/: rotating_image.livemd
exla/notebooks/: rotating_image.livemd
exla/test/: exla_test.exs  nx_linalg_test.exs  test_helper.exs
lib/: exla.ex  next.ex  nx.ex
lib/exla/: .#tensor.ex  application.ex  buffer.ex  builder.ex  client.ex  computation.ex  defn.ex  device.ex  executable.ex  executable_build_options.ex  executable_run_options.ex  lib.ex  local_executable.ex  locked_cache.ex  logger.ex  nif.ex  nx_device.ex  op.ex  ops.ex  shape.ex  sharded_buffer.ex  sharded_nx_device.ex  tensor.ex  type.ex
lib/next/: compiler.ex  kernel.ex  module.ex
lib/nx/: binary_device.ex  binary_tensor.ex  bitstring_device.ex  defn.ex  device.ex  grad.ex  heatmap.ex  names.ex  shape.ex  shared.ex  tensor.ex  type.ex  util.ex
nx/: .formatter.exs  .gitignore  CHANGELOG.md  EIG_IMPLEMENTATION_NOTES.md  Makefile  README.md  d.ex  j.ex  mix.exs  problem.exs  run_axon.exs  sharding.exs  sharding_example.exs  test.ex
nx/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
nx/bench/: dot.exs  sort.exs
nx/c_src/: nx_nif_utils.hpp  pytorch.cpp
nx/config/: config.exs
nx/examples/: memory_based_splitting.exs
nx/exercises/: exercises-1-20.livemd
nx/guides/: intro-to-nx.livemd  modoc_agg_nx_01.livemd  tensor-aggregation-101.livemd  vectorization.livemd
nx/lib/: eigh_block.ex  nx.ex  teste.ex
nx/test/: nx_test.exs  test_helper.exs
src/: .bazelrc  WORKSPACE  erts.BUILD  generate_compilation_db.sh
src/exla/: BUILD  builder.cc  exla.cc  exla_allocator.cc  exla_allocator.h  exla_macros.h  exla_nif_util.cc  exla_nif_util.h  nifpp.h  repo.bzl  workspace.bzl
test/: builder_test.exs  client_test.exs  exla_test.exs  local_executable_test.exs  next_test.exs  nx_test.exs  op_test.exs  shape_test.exs  test_helper.exs
test/exla/: buffer_test.exs  builder_test.exs  client_test.exs  defn_test.exs  device_test.exs  executable_test.exs  local_executable_test.exs  locked_cache_test.exs  nx_device_test.exs  op_test.exs  shape_test.exs  sharded_buffer_test.exs  tensor_test.exs
test/nx/: defn_new_test.exs  defn_test.exs  device_test.exs  expr_test.exs  grad_test.exs  heatmap_test.exs  print_quoted_test.exs  tensor_test.exs  (+1 more)
torchx/: .default_libtorch_version  .formatter.exs  .gitignore  .iex.exs  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.win  README.md  id_rsa  id_rsa.pub  mix.exs  nx.code-workspace
torchx/c_src/: ipc.cpp  ipc.hpp  nx_nif_utils.hpp  torchx.cpp  torchx_cuda.cpp  torchx_cuda.hpp  torchx_nif_util.h
torchx/c_src/dll_loader/: torchx_dll_loader.cpp
torchx/cmake/: CMakeLists.txt
torchx/config/: config.exs
torchx/examples/: lin_reg.exs  mnist.exs  mnist_manual.exs  mnist_native.exs  regression.exs  regression_manual.exs  regression_native.exs
torchx/guides/backend_documentation/: index.md  nx.md  nx_lin_alg.md
torchx/lib/: torchx.ex
torchx/lib/torchx/: backend.ex  dll_loader.ex  nif.ex
torchx/nerves/: toolchain.cmake
torchx/scripts/: download_libtorch.sh
torchx/test/: lin_reg.exs  nx_linalg_test.exs  test_helper.exs  torchx_test.exs
torchx/test/examples/: lin_reg.exs  mnist.exs
torchx/test/support/: torchx_case.ex
torchx/test/torchx/: backend_documentation_test.exs  backend_test.exs  complex_test.exs  defn_test.exs  device_memory_sharing_test.exs  device_test.exs  nx_block_test.exs  nx_doctest_test.exs  nx_linalg_doctest_test.exs  nx_linalg_test.exs  nx_test.exs  random_test.exs
torchx/test/torchx/defn/: elixir_call_test.exs
(+453 files in other folders)
