[package]
name = "candlex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "candlex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle" }
half = "2.3.1"
num-traits = "0.2.17"
rustler = { version = "0.30.0", default-features = false, features = ["derive", "nif_version_2_16"] }
statrs = "0.16.0"
thiserror = "1.0.50"

[build-dependencies]
anyhow = "1.0.75"

[features]
cuda = ["candle-core/cuda"]
